--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: tesseract
 Section: graphics
 Priority: optional
 Maintainer: Alexander Pozdnyakov <almipo@mail.ru>
-Build-Depends: debhelper (>= 7.0.50~), libleptonica-dev (>= 1.72~), 
+Build-Depends: debhelper (>= 9), libleptonica-dev (>= 1.72~), 
                automake, libtool, libpango1.0-dev, libcairo2-dev, libicu-dev, 
                libpng-dev, libjpeg-dev, libtiff-dev, zlib1g-dev, git, autoconf-archive, asciidoc, 
                xsltproc, docbook-xsl, docbook-xml
