--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Build-Depends: debhelper (>= 9), libleptonica-dev (>= 1.72~),
                xsltproc, docbook-xsl, docbook-xml
 Standards-Version: 4.1.3
 Homepage: https://github.com/tesseract-ocr/
+Vcs-Git: https://github.com/AlexanderP/tesseract-debian.git
+Vcs-Browser: https://github.com/AlexanderP/tesseract-debian
 
 Package: tesseract-ocr
 Architecture: any
