--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Alexander Pozdnyakov <almipo@mail.ru>
 Build-Depends: debhelper (>= 9), libleptonica-dev (>= 1.72~),
                automake, libtool, libpango1.0-dev, libcairo2-dev, libicu-dev,
                libpng-dev, libjpeg-dev, libtiff-dev, zlib1g-dev, git, autoconf-archive, asciidoc,
-               xsltproc, docbook-xsl, docbook-xml, tesseract-ocr-eng
+               xsltproc, docbook-xsl, docbook-xml, tesseract-ocr-eng (>= 4.00~)
 Standards-Version: 4.1.4
 Homepage: https://github.com/tesseract-ocr/
 Vcs-Git: https://github.com/AlexanderP/tesseract-debian.git
