--- a/debian/rules
+++ b/debian/rules
@@ -24,6 +24,7 @@ override_dh_auto_build:
 
 override_dh_install:
 	cd $(CURDIR)/src/training/ && chmod +x *.sh
+	cd $(CURDIR)/debian/tmp/usr/bin && for i in $$(ls *.sh); do rm -f $${i}; done
 	dh_install
 
 override_dh_auto_install:
