* Аdd package tesseract-training * Moved tesstrain.sh to tesseract-training package * Moved ambiguous_words, classifier_tester, cntraining,   combine_lang_model, combine_tessdata, dawg2wordlist,   lstmeval, lstmtraining, merge_unicharsets, mftraining,   set_unicharset_properties, shapeclustering, text2image,   unicharset_extractor, wordlist2dawg to tesseract-training   package (closes: #933878)

--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,16 @@ Description: Tesseract command line OCR tool
  extract printed text from images. It supports a wide variety of
  languages. This package includes the command line tool.
 
+Package: tesseract-training
+Architecture: any
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ tesseract-ocr-eng (>= 4.00~), tesseract-ocr-osd (>= 4.00~), libtesseract4 (= ${binary:Version}), liblept5 (>= 1.75.3)
+Description: Tesseract training tools
+ Tesseract is an open source Optical Character Recognition (OCR)
+ Engine. It can be used directly, or (for programmers) using an API to
+ extract printed text from images. It supports a wide variety of
+ languages. This package includes the command line training tools.
+ 
 Package: libtesseract-dev
 Section: libdevel
 Architecture: any
