tesseract (4.1.1-2.1) unstable; urgency=medium
  [ Peter Green ]
  * Edit configure.ac to disable -march=native (Closes: #949638)
  * Edit control/rules to enable autoreconf.

 -- Paul Gevers <elbrus@debian.org>  Thu, 04 Feb 2021 21:49:33 +0100

--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ ifeq (,$(NUMJOBS))
 endif
 
 %:
-	dh $@ --parallel
+	dh $@ --parallel --with autoreconf
 
 override_dh_auto_build:
 	make -j$(NUMJOBS)
