--- a/debian/control
+++ b/debian/control
@@ -6,10 +6,11 @@ Build-Depends: debhelper (>= 9), libleptonica-dev (>= 1.75.3),
                automake, libtool, libarchive-dev, libpango1.0-dev, libcairo2-dev, libicu-dev,
                libpng-dev, libjpeg-dev, libtiff-dev, zlib1g-dev, git, asciidoc,
                xsltproc, docbook-xsl, docbook-xml, tesseract-ocr-eng (>= 4.00~), dh-autoreconf
-Standards-Version: 4.4.1
+Standards-Version: 4.5.1
 Homepage: https://github.com/tesseract-ocr/
 Vcs-Git: https://github.com/AlexanderP/tesseract-debian.git
 Vcs-Browser: https://github.com/AlexanderP/tesseract-debian
+Rules-Requires-Root: no
 
 Package: tesseract-ocr
 Architecture: any
