--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ ifeq (,$(NUMJOBS))
 endif
 
 %:
-	dh $@ --parallel --with autoreconf
+	dh $@ --with autoreconf
 
 override_dh_auto_build:
 	make -j$(NUMJOBS)
