--- a/debian/rules
+++ b/debian/rules
@@ -29,7 +29,7 @@ override_dh_auto_install:
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
 	./tesseract -v
-	./tesseract ./debian/test_image.tif -
+	./tesseract ./test/testing/phototest.tif -
 endif
 
 override_dh_auto_clean:
