--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,8 @@
 
 export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
-CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
+CFLAGS:='-g -O2 -fno-omit-frame-pointer -mno-omit-leaf-frame-pointer -ffile-prefix-map=/workspace=. -flto=auto -ffat-lto-objects -fstack-protector-strong -fstack-clash-protection -Wformat -fcf-protection'
+#CFLAGS:=$(shell dpkg-buildflags --get CFLAGS)
 LDFLAGS:=$(shell dpkg-buildflags --get LDFLAGS)
 CFLAGS += -Wall -g -fPIC -DTESSDATA_PREFIX='\"/usr/share/tesseract-ocr/5\"'
 
